2008-6-4  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-6.
    * R/traceplot:
      1. make it a generic
      2. traceplot.bugs --> S4 method

2008-5-1  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-5.

2008-4-12  Yu-Sung Su     <ys463@columbia.edu>  
    * R/bayesglm.h: 
        1. fix a bug in print for bayesglm.h
        2. add show for bayesglm.h
    * R/coefplot: add a stop message for varnames

2008-4-11  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-4.
    * man/terms: terms.Rd is obsolet!
    * R/bayesglm: terms.object -> terms
    * R/bayesglm.h: use model.matrix.bayes.h; terms.object -> terms
    * R/model.matrix.bayes: 
        1. no longer a S4 method.
        2. add model.matrix.bayes2 for bayesglm.h
    * R/terms: terms.bayes is obsolet!

2008-4-10  Yu-Sung Su     <ys463@columbia.edu>  
           Masanao Yajima <my2167@columbia.edu>
    * man/traceplot.bugs: add help file of traceplot.bugs().
    * R/rescale: if !is.numeric(x.obs) coerce x.obs into numeric
    * R/sim: fix a naming issue for group levels in lmer object.
    * R/traceplot.bugs: add traceplot.bugs().
    
2008-2-18  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-3.

2008-2-17  Yu-Sung Su     <ys463@columbia.edu>  
    * R/coefplot: add extra margin to the margin ``k=1/n.x"

2008-2-11  Yu-Sung Su     <ys463@columbia.edu>  
    * R/mcplot: object check: either matrix or data.frame

2008-2-9  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-2.
    * NAMESPACE: export new print & show methods for bayespolr & bayesglm
    * Man/bayespolr: add more descriptions on prior.counts.for.bins
    * R/AllInternal: round fix becomes internal
    * R/bayespolr: fix a bug when no predictor is in the model
    * R/balanceplot: smart magining.
    * R/coefplot: smart magining.
    * R/mcplot: smart magining.

